# cli-drop-manager

./: Cargo.toml
src/: main.rs
