[package]
name = "cli-drop-manager"
version = "0.1.0"
authors = ["Kappa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
serde_json = "1.0.58"
